# atlas

./: .gitignore  .goreleaser.yaml  BACKLOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: main.rs  pipeline.rs
crates/atlas-cli/tests/: extract_e2e.rs  resolve_gate.rs
crates/atlas-cli/tests/fixtures/: httpx_built.json
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: ids.rs  lib.rs
crates/atlas-core/tests/: roundtrip.rs
crates/atlas-export/: Cargo.toml
crates/atlas-export/src/: cypher.rs  graphml.rs  html.rs  lib.rs  svg.rs
crates/atlas-extract/: Cargo.toml
crates/atlas-extract/src/: ada.rs  apex.rs  astro.rs  bash.rs  blade.rs  dart.rs  elixir.rs  engine.rs  fortran.rs  go.rs  json_config.rs  julia.rs  lib.rs  nix.rs  objc.rs  pascal.rs  pascal_forms.rs  powershell.rs  r_lang.rs  razor.rs  resolve.rs  rust_lang.rs  sfc.rs  sln.rs  solidity.rs  sql.rs  svelte.rs  terraform.rs  verilog.rs  vue.rs  xaml.rs  zig_lang.rs
crates/atlas-extract/tests/: httpx.rs  langs.rs
crates/atlas-extract/tests/fixtures/: auth.json  claude_desktop_config.json  client.json  data.json  exceptions.json  mcp_config.json  models.json  package.json  package_json.json  sample.R  sample.adb  sample.astro  sample.blade.php  sample.cshtml  sample.dart  sample.nix  sample.sol  sample.svelte  sample.tf  sample.tfvars  sample.vue  sample.xaml  sample_apex_cls.json  sample_apex_trigger.json  sample_astro.json  sample_bash.json  sample_blade.json  sample_c.json  sample_cpp.json  sample_cs.json  sample_cshtml.json  sample_csproj.json  sample_cu.json  sample_dart.json  sample_dfm.json  sample_elixir.json  sample_fortran.json  sample_go.json  sample_groovy.json  sample_java.json  (+34 more)
crates/atlas-extract/tests/fixtures/jsmod/: sample.js
crates/atlas-extract/tests/fixtures/sourced/: helpers.sh  main.sh
crates/atlas-graph/: Cargo.toml
crates/atlas-graph/src/: analyze.rs  cluster.rs  lib.rs  report.rs
crates/atlas-graph/tests/: gate.rs
crates/atlas-ingest/: Cargo.toml
crates/atlas-ingest/src/: chunk.rs  csv_reader.rs  ipynb.rs  lib.rs  markdown.rs  office.rs  pdf.rs
crates/atlas-ingest/tests/: readers.rs
crates/atlas-ingest/tests/fixtures/: doc.md  notebook.ipynb  small.csv
crates/atlas-install/: Cargo.toml
crates/atlas-install/src/: hooks.rs  lib.rs
crates/atlas-llm/: Cargo.toml
crates/atlas-llm/src/: lib.rs  tests.rs
crates/atlas-query/: Cargo.toml
crates/atlas-query/src/: lib.rs  main.rs
crates/atlas-query/tests/: gate.rs
crates/atlas-serve/: Cargo.toml
crates/atlas-serve/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md
scripts/: ledger-gate.sh
