[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "atlas — knowledge-graph CLI (Rust port of graphify)"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-core = { path = "../atlas-core" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
