[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "atlas — knowledge-graph CLI (Rust port of graphify)"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-core = { path = "../atlas-core" }
atlas-extract = { path = "../atlas-extract" }
atlas-graph = { path = "../atlas-graph" }
atlas-export = { path = "../atlas-export" }
atlas-query = { path = "../atlas-query" }
atlas-serve = { path = "../atlas-serve" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
