[package]
name = "atlas-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "atlas graph model, node-link (de)serialization, and schema validation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
regex = "1"
unicode-normalization = "0.1"
