[package]
name = "atlas-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "atlas AST extractor — deterministic code-graph extraction (Python), a Rust port of graphify's extract --code-only"

[dependencies]
atlas-core = { path = "../atlas-core" }
serde_json.workspace = true
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[dev-dependencies]
serde_json.workspace = true
