[package]
name = "atlas-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "atlas AST extractor — deterministic code-graph extraction (Python), a Rust port of graphify's extract --code-only"

[dependencies]
atlas-core = { path = "../atlas-core" }
serde_json.workspace = true
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.26"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7.3"
tree-sitter-lua = "0.5"
tree-sitter-bash = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-zig = "1.1.2"
tree-sitter-powershell = "0.26.4"
tree-sitter-objc = "3.0.2"
tree-sitter-julia = "0.23.1"
tree-sitter-fortran = "0.6"
regex = "1"

[dev-dependencies]
serde_json.workspace = true
